# news-agent

./: .gitignore  README.md  aa.py  requirements.txt
news_analyzer/: README.md  app.py  env.py  naver_news_20250913_234722.xlsx  pyproject.toml  requirements.txt
news_analyzer/[tr]news-agent/: app.py  batch_crawler.py  config.py  crawler.py
news_analyzer/[tr]news-agent/tests/: test_batch_crawler.py
news_analyzer/[tr]news-agent/utils/: __init__.py  excel_handler.py
news_analyzer/docs/: naver_selectors.md
news_analyzer/input/: 09303030.xlsx.csv  09303030.xlsx.xlsx  ESG vs Financial keywords_UI.xlsx  NEWS.xlsx  NEWS2.xlsx  삼성전자_횡령.csv  삼성전자_횡령.xlsx
news_analyzer/input/인수인계/: 자료0-1.xlsx
news_analyzer/output/: news_output_20251007_165304.xlsx
news_analyzer/scripts/: main.py
news_analyzer/src/input/: input.xlsx
news_analyzer/src/input111/: news0.xlsx
news_analyzer/src/news_analyzer/: __init__.py  company_identifier.py  naver_crawler_time.py
news_analyzer/src/news_analyzer_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
news_analyzer/src/news_collector/: __init__.py  main.py
news_analyzer/src/output/: adjust.ipynb  company_results_20250919_120116.xlsx  company_results_20250919_132451.xlsx  company_results_20250919_153507.xlsx  company_results_20250919_163438.xlsx  keyword_results_20250918_164342.xlsx  keyword_results_20250919_120116.xlsx  keyword_results_20250919_132451.xlsx  (+11 more)
news_analyzer/tests/: apitest.py  test_company_identifier.py  test_crawler_excel.py  test_crawler_safe.py  test_datetime.py  test_pipeline.py  test_sentiment_analyzer.py
(+847 files in other folders)
