[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-analyzer-demo"
version = "0.1.0"
description = "Mock news analysis pipeline: crawler -> sentiment -> company id -> save"
authors = [{name="Your Name"}]
requires-python = ">=3.9"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.packages.find]
where = ["src"]
